tests/parser/fail/v18_fail_anonymous_struct_field.ep
# COMPILE_FAIL: Expected COLON
type Meta {
    line: i64
}

type Node {
    Meta
}

fun main(): void {
}
